--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Home Page
+        </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
+    <body>
+        <header>
+            <p>e-Tantra</p>
+        </header>
+
+        <!-- <nav>
+
+        </nav> -->
+        <main>
+            <div class="img_disp">
+                <img src="images/delivery-4728949_1280.png" alt="Delivery Illustration" width="450" height="auto">
+            </div>
+            <div class="center">
+                <a href="dashboard.html" target="_blank"><p>Track Order</p></a>
+            </div>
+        </main>
+
+        <footer>
+            <div>
+                <a href="mailto:eyrc.vb.0205@gmail.com?Subject=Delivery Queries"><p>Contact</p></a>
+                <p>About Us</p>
+            </div>
+        </footer>
+    </body>
+</html>
