--- a/index.html
+++ b/index.html
@@ -1,36 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Home Page
-        </title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Vargi Bot</title>
+		<link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/fixed.css">
 
-    <body>
-        <header>
-            <p>e-Tantra</p>
-        </header>
+		<link
+		rel="stylesheet"
+		href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+		integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+		crossorigin=""
+		/>
 
-        <!-- <nav>
+		<script
+		src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+		integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+		crossorigin=""
+		></script>
 
-        </nav> -->
-        <main>
-            <div class="img_disp">
-                <img src="images/delivery-4728949_1280.png" alt="Delivery Illustration" width="450" height="auto">
-            </div>
-            <div class="center">
-                <a href="dashboard.html" target="_blank"><p>Track Order</p></a>
-            </div>
-        </main>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+	</head>
 
-        <footer>
-            <div>
-                <a href="mailto:eyrc.vb.0205@gmail.com?Subject=Delivery Queries"><p>Contact</p></a>
-                <p>About Us</p>
-            </div>
-        </footer>
-    </body>
+	<body data-spy="scroll" data-target="#navbarResponsive">
+
+		<!--- Start Home Section -->
+		<div id="home">
+			<!-- Start Navigation -->
+			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+				<a class="navbar-brand" href="#">
+					<h1>वर्गी बॉट #VB0205</h1>
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+					<span class="navbar-toggler-icon">
+
+					</span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#home">Home</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link" href="#dashboard">Dashboard</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link" href="#aboutUs">About Us</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<!-- End Navigation -->
+
+			<!-- Start Landing Page -->
+			<div class="landing">
+				<div class="home-wrap">
+					<div class="home-inner">
+
+					</div>
+				</div>
+			</div>
+
+			<div class="caption text-center">
+				<h1>Track Order</h1>
+				<a class="btn btn-outline-light btn-lg" href="#dashboard">
+					<h1>Dashboard</h1>
+				</a>
+			</div>
+			<!-- End Landing Page -->
+		</div>
+		<!--- End Home Section -->
+
+		<!--- Start Home Section -->
+		<div id="dashboard" class="offset">
+			<div class="col-12 narrow text-center">
+				<h1>Dashboard</h1>
+			</div>
+
+			<div class="jumbotron">
+				<div class="table-wrapper">
+					<table class="fl-table">
+						<tr>
+							<th>Order ID</th>
+							<th>Item</th>
+							<th>Priority</th>
+							<th>Quantity</th>
+							<th>City</th>
+						</tr>
+						<tbody id="tableContent">
+						</tbody>
+					</table><br>
+				</div>
+
+				<div class="row">
+					<div class="col-md-6">
+						<div id="map" style="height: 380px; border-style: solid;">
+						</div>
+					</div>
+
+					<div class="col-md-6">
+						<div id="column_chart" style="height: 380px; border-style: solid;">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--- End Home Section -->
+
+		<!--- Script Source Files -->
+		<script src="js/jquery-3.3.1.min.js"></script>
+		<script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+		<script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
+		<!--- End of Script Source Files -->
+
+	</body>
+
+	<script type="text/javascript"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script type="text/javascript">
+        /////////////Ajax Requests////////////
+        $(document).ready(function () {
+            // Fetch the initial table
+            refreshTable();
+
+            // Fetch every 1 second
+            setInterval(refreshTable, 1000);
+
+            // Fetch the initial Map
+            refreshMap();
+
+            // Fetch every 5 second
+            setInterval(refreshMap, 5000);
+
+            // Fetch the initial Chart
+            refreshChart();
+
+            // Fetch every 5 second
+            setInterval(refreshChart, 5000);
+		});
+
+		google.charts.load("current", { packages: ['corechart'] });
+  		google.charts.setOnLoadCallback(refreshChart);
+
+		function refreshTable() {
+
+			var trHTML = '';
+
+			$.getJSON('https://spreadsheets.google.com/feeds/list/1ZIMPnqBGrNl7b_y75VRg4cT18tzp3-eC6DW5YcRDbe0/1/public/full?alt=json', function (data) {
+
+				// var trHTML = '';
+
+				for (var i = 0; i < data.feed.entry.length; ++i) {
+					var myData_map, myData_order;
+
+					trHTML += '<tr><td>' + data.feed.entry[i].gsx$orderid.$t +
+						'</td><td>' + data.feed.entry[i].gsx$item.$t +
+						'</td><td>' + data.feed.entry[i].gsx$priority.$t +
+						'</td><td>' + data.feed.entry[i].gsx$quantity.$t +
+						'</td><td>' + data.feed.entry[i].gsx$city.$t +
+						'</td></tr>';
+
+				}
+
+				console.log(trHTML);
+				$('#tableContent').html(trHTML);
+				var trHTML = '';
+
+			});
+		}
+
+		function refreshMap() {
+            var container = L.DomUtil.get('map');
+
+            if (container != null) {
+                container._leaflet_id = null;
+            }
+
+            var map = L.map('map').setView([20.5937, 78.9629], 4);
+            var jsonDataObject = [];
+
+            $.getJSON('https://spreadsheets.google.com/feeds/list/1ZIMPnqBGrNl7b_y75VRg4cT18tzp3-eC6DW5YcRDbe0/1/public/full?alt=json', function (data) {
+                for (var i = 0; i < data.feed.entry.length; ++i) {
+
+                    var json_data = {
+                        "City": data.feed.entry[i].gsx$city.$t,
+                        "OderID": data.feed.entry[i].gsx$orderid.$t,
+                        "Item": data.feed.entry[i].gsx$item.$t,
+                        "Latitude": parseFloat(data.feed.entry[i].gsx$latitude.$t),
+                        "Longitude": parseFloat(data.feed.entry[i].gsx$longitude.$t)
+                    };
+                    jsonDataObject.push(json_data);
+
+                    for (var j = 0; j < jsonDataObject.length; j++) {
+                        var marker = L.marker(L.latLng(parseFloat(jsonDataObject[j].Latitude), parseFloat(jsonDataObject[j].Longitude)));
+                        marker.bindPopup(jsonDataObject[j].City, {
+                            autoClose: false
+                        });
+                        map.addLayer(marker);
+                        marker.on('click', onClick_Marker)
+                        // Attach the corresponding JSON data to your marker:
+                        marker.myJsonData = jsonDataObject[j];
+
+                        function onClick_Marker(e) {
+                            var marker = e.target;
+                            popup = L.popup()
+                            .setLatLng(marker.getLatLng())
+                            .setContent("Order ID: " + marker.myJsonData.OderID + " || Item: " + marker.myJsonData.Item)
+                            .openOn(map);
+                        }
+
+                        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+                        }).addTo(map);
+                    }
+                }
+            });
+		}
+
+		function refreshChart() {
+			var jsonDataObject = [];
+			var graph_arr = [['Order ID', 'Time Taken', { role: 'style' }]];
+			var bar_color = [];
+			$.getJSON('https://spreadsheets.google.com/feeds/list/1ZIMPnqBGrNl7b_y75VRg4cT18tzp3-eC6DW5YcRDbe0/1/public/full?alt=json', function (data) {
+			for (var i = 0; i < data.feed.entry.length; ++i) {
+				var json_data = {
+				"OderID": data.feed.entry[i].gsx$orderid.$t,
+				"TimeTaken": parseFloat(data.feed.entry[i].gsx$timetaken.$t),
+				"Priority": data.feed.entry[i].gsx$priority.$t
+				};
+				jsonDataObject.push(json_data);
+			};
+			// Setting color for the coloumns of graph according to priority of items
+			for (var j in jsonDataObject) {
+				if (jsonDataObject[j].Priority == 'HP') {
+				var color = '#FF0000';
+				}
+				else if (jsonDataObject[j].Priority == 'MP') {
+				var color = '#FFFF00';
+				}
+				else if (jsonDataObject[j].Priority == 'LP') {
+				var color = '#00FF00';
+				}
+				bar_color.push(color)
+			}
+
+			// Converting Json Object to JavaScript Array
+			for (var j in jsonDataObject) {
+				graph_arr.push([jsonDataObject[j].OderID, jsonDataObject[j].TimeTaken, bar_color[j]]);
+			}
+			var graphArray_Final = google.visualization.arrayToDataTable(graph_arr);
+
+			var data = new google.visualization.DataView(graphArray_Final);
+
+			var options = {
+				title: 'Time Taken for items to be Shipped',
+				hAxis: { title: 'Order ID' },
+				vAxis: { title: 'Time Taken (s)' },
+				legend: { position: "none" },
+			};
+			var chart = new google.visualization.ColumnChart(document.getElementById('column_chart'));
+			chart.draw(data, options);
+			});
+		}
+
+	</script>
+
 </html>
+
+<!--- Check out my courses! -->
+<div class="udemy-course" style="position: fixed; bottom: 0; right: 0; margin-bottom: -5px; z-index: 100;">
+	वर्गी बॉट #VB0205
+</div>
