--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!--- Start Home Section -->
 		<div id="home">
 			<!-- Start Navigation -->
-			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+			<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
 				<a class="navbar-brand" href="#">
 					<h1>वर्गी बॉट #VB0205</h1>
 				</a>
@@ -107,12 +107,12 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-sm-6">
 						<div id="map" style="height: 380px; border-style: solid;">
 						</div>
 					</div>
 
-					<div class="col-md-6">
+					<div class="col-sm-6">
 						<div id="column_chart" style="height: 380px; border-style: solid;">
 						</div>
 					</div>
